			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05b: *********************************

BUG: (10/21/06, DN) Cannot select horizontal arcs (Bug #1248).
FIX: In EDatabase.getBackup() call ai.getBounds() for each arcs to precompute arc bounds.

BUG: (10/20/06, GVG) [Bug 1245] FIle->Project Settings->Technology page is confusing/inconsistent (Bug# 1245)
FIX: Technology tab in project preferences was re-organized. For MoCMOS tech, the feature size is included as
part of the panel title.

BUG: (10/20/06, GVG) Exception in TechPalette if Mosis is chosen and you select min or aligned primitives (TSMC180)
FIX: More checking for unused elements.

IMP: (10/18/06, DN) Added class topology.Topology to manage graph of nodes and arcs.
    Classes Geometry and RTNode are moved to database.topology package.

IMP: (10/17/06, DN) ImmutableArcInst can compute its bounds without real ArcInst.

IMP: (10/17/06, GVG) Refactoring spicenetlist so some classes can be reused in DSPF reader.

IMP/MAN: (10/17/06, GVG) Import of Cadence colors moved to WindowMenu -> Colors. Action is in a job now.

IMP/MAN: (10/17/06, SMR) Added Cell expansion controls to Network / Node Extraction Preferences.

BUG: (10/17/06, DN) Zero-length arcs with angles 0 and 90 generates Polys with swapped head and tail extension.
FIX: In Poly.makeEndPointPoly use "angle == 0" and "angle == 900" conditions.
     In debug menu "Dima|Find error-prone arcs" command show such arcs in all loaded libraries.

BUG: (10/16/06, DN) API allows to create negated layout arcs.
FIX:  Negated arc end is always connected to PrimitivePort which "isNegatable". 

BUG: (10/16/06, DN) Delete subcells, then undo. Their expansion status is lost.
FIX: Keep info about expanded nodes on a Cell. 

IMP: (10/16/06, GVG) Skeleton to read DSPF

IMP: (10/16/06, DN) Connectivity index was moved to immutable CellBackup.